--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,8 +43,5 @@ jobs:
         script: |
           cd ~/backend
           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          sudo docker build -t jeongin4667/dingle-api:${GITHUB_SHA::7} .
-          sudo docker compose up -d
-        
-        
-        
+          sudo docker build -t jeongin4667/dingle-api:latest .
+          sudo docker compose up -d --force-recreate
