--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,47 +1,42 @@
-name: Deploy
+name: CI/CD
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ develop ]
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to deploy'
+        required: true
+        default: 'develop'
 
-permissions:
-  contents: read
+concurrency:
+  group: cicd-${{ github.ref_name }}
+  cancel-in-progress: true
 
 jobs:
-  build:
-
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    # 기본 체크아웃
-    - name: Checkout
-      uses: actions/checkout@v3
-    # JDK 21 세팅
-    - name: Set up JDK 21
-      uses: actions/setup-java@v3
-      with:
-        java-version: '21'
-        distribution: 'temurin'
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H 13.125.14.182 >> ~/.ssh/known_hosts
 
-    # Gradlew 실행 허용
-    - name: Run chmod to make gradlew executable
-      run: chmod +x ./gradlew
-    
-    # Gradle build (Test 제외)
-    - name: Build with Gradle
-      run: ./gradlew clean build -x test
+      - name: Deploy with docker-compose (EC2 build)
+        run: |
+          ssh ${{ secrets.SSH_USERNAME }}@13.125.14.182 << 'EOF'
+            set -e
+            cd /home/ubuntu/app
 
+            echo "최신 코드 가져오기"
+            git pull origin develop
 
-    # Deploy
-    - name: Deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: 13.125.14.182
-        username: ${{ secrets.SSH_USERNAME }}
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        envs: GITHUB_SHA
-        script: |
-          cd ~/backend
-          sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-          sudo docker build -t dingle-app:latest .
-          sudo docker compose up -d --force-recreate
+            echo "Docker Compose build & up"
+            docker-compose up -d --build
+
+            echo "Deploy finished"
+          EOF
