--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,9 @@ jobs:
 
           echo "최신 코드 가져오기"
           git pull origin dev
+          
+          echo "build"
+          ./gradlew clean build -x test
 
           echo "Docker Compose build & up"
           sudo docker compose up -d --build
