편의시설-마트, 백화점, 시장 데이터 수집

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+	implementation 'org.locationtech.proj4j:proj4j:1.2.2'
+	implementation "org.locationtech.proj4j:proj4j-epsg:1.2.3"
 
 }
 
