--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,14 @@ repositories {
 	mavenCentral()
 }
 
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', 'src/main/generated']
+		}
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -44,6 +52,19 @@ dependencies {
 	implementation 'org.locationtech.proj4j:proj4j:1.2.2'
 	implementation "org.locationtech.proj4j:proj4j-epsg:1.2.3"
 
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+}
+
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file("src/main/generated")
+}
+
+clean {
+	delete file("src/main/generated")
 }
 
 tasks.named('test') {
