--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation "org.hibernate.orm:hibernate-spatial:6.6.39.Final"
 
 }
 
